fixing some alignments

--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -2,7 +2,7 @@ body {
 	font-size: 16px;
 }
 
-.col-xs-3 {
+.col-xs-5 {
 	position: absolute;
 	right: 0;
 	top: 50%;
